@@ -4,9 +4,11 @@ Change log for zeit.web
 2.29 (unreleased)
 -----------------
 
-- HOTFIX: Fix iOS' 9 Safari specific misbehaviour
-
 - ZON-2393: Replace adlabel span by css content to improve ad reloading
+
+- FIX: Don't throw 404s if ranking area is empty
+
+- HOTFIX: Fix iOS' 9 Safari specific misbehaviour
 
 
 2.28 (2015-11-17)
